# high_performance_computing

./: README.md
MPI_CPU/: environment.yml
MPI_CPU/code/: execution.py  monte_carlo.py  monte_carlo_parallel.py  sample_plot.py
MPI_CPU/results/: monte_carlo.vtk
MPI_CPU/src/: execution.py  monte_carlo_parallel.py  performance_monte_carlo.job  sample_plot.py
OpenCL_GPU/: CMakeLists.txt  README.md  copyimage.cl  imageCopyFilter.cpp  plot.py  utils.cpp  utils.hpp
OpenMP_CPU/: fusion.c  test_trie.c
